views/mus: Add support for child widgets.

This fixes find-in-page, sad-tab etc. in chrome --mash.

BUG=612820

Review-Url: https://codereview.chromium.org/2018333002
Cr-Commit-Position: refs/heads/master@{#396917}

Former-commit-id: 53b0bb0c43383a45fb9df294782ecc2bfa333f2b